<resources>
    <string name="app_name">instaclone</string>
    <string name="language">한국어(대한민국)</string>
    <string name="make_id">새 계정 만들기</string>
    <string name="btn_login">로그인</string>
    <string name="login_id">전화번호, 이메일 주소 또는 사용자 이름</string>
    <string name="login_password">비밀번호</string>
    <string name="login_info">로그인 상세 정보를 잊으셨나요?</string>
    <string name="signin">계정이 없으신가요?</string>
    <string name="law">연락처기 주기적으로 동기화되고 instagram 서버에 저장되어
친구를 빠르게 찾고 Instagram 서비스를 개선하는데 사용됩니다. 연락처를 삭제하려면 설정으로 이동하여
연결을 해제하세요.</string>
</resources>