<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".logindisplay">
<!--    로그인 버튼을 처음에 누르고 진짜로 이메일하고 비밀번호 입력 하는 곳-->

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:gravity="center"
        android:textSize="15dp"
        android:id="@+id/btn_language"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:src="@drawable/instagram" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id"
        android:background="@drawable/edit_round"
        android:layout_marginBottom="10dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:background="@drawable/edit_round"
        android:layout_marginBottom="10dp"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/btn_login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:backgroundTint="#458EFF"/>
<!--        테두리 없애줌-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_info"
            android:layout_marginLeft="40dp"
            android:textSize="12dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="로그인 도움말 보기"
            android:textColor="#000000"
            android:background="#00ff0000"
            android:textSize="12dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="또는"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:textColor="#458EFF"
        android:layout_margin="10dp"
        android:text="Facebook으로 로그인"

        />

</LinearLayout>